bluec-tests/tests/invalid/functions/call_expression_ternary.c
int main(void) {
    int *a = 0;
    int *b = 0;
    return ((1 > 2 ? a : b))();
}